2010-10-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: @ stated filename.

	* Fix: speed up windows process.

2010-10-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: check unsaved buffer in interactive read

	* Change: message-edit-mode and file-select-mode can create multiple buffers.

	* Change: fsvn-flatten-command-args -> fsvn-command-args-canonicalize

2010-10-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.7

2010-10-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: expire temp files 2 days -> 5 days

	* Change: expire ediff files

2010-10-07  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-svnsync-command-internal

	* Improvement: fsvn-merged-import-with-log accept local destination.

	* Add: easymenu (message-edit, popup, process-list)

2010-10-06  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-command-error promote to error-condition

	* Change: fsvn-file-name-as-repository -> fsvn-directory-name-as-repository

2010-10-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: fsvn-popup-copy-process-sentinel -> fsvn-popup-copy/move-process-sentinel

	* Add: fsvn-log-list-ediff-local bound to `= l' in log-list-mode

	* Add: fsvn-browse-ediff-path bound to `= E' in browse-mode

	* Change: fsvn-log-list-ediff-with-wc -> fsvn-log-list-ediff-with-base

	* Improvement: Enable can ediff directory in log-list-mode (But is not well designed)

	* Improvement: enable save directory in log-list-mode

2010-10-02  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: complete url and complete argument.

	* Add: Show CopyFrom path in log-sibling-mode.

	* Add: fsvn-log-list-propview-this bound to `z p'

	* Add: fsvn-log-sibling-propview-this bound to `z p'

	* Fix: completing-read-url

	* Change: fsvn-open-log-view-mode -> fsvn-open-logview-mode

2010-09-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
