@@ -1,3 +1,8 @@
+2010-10-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: fsvn-browse-smart-move-this bound to `C-c C-b C-m'
+	* Add: fsvn-browse-smart-copy-this bound to `C-c C-b C-c'
+
 2010-10-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: @ stated filename.
